# burn-tutorial

./: Cargo.toml  README.md
simple_mnist/: Cargo.toml
simple_mnist/src/: lib.rs  main.rs  model.rs  training.rs
