[package]
name = "simple_mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { git = "https://github.com/burn-rs/burn.git" }
burn-autodiff = { git = "https://github.com/burn-rs/burn.git" }
burn-ndarray = { git = "https://github.com/burn-rs/burn.git" }
serde = { version = "1.0.151", features = ["derive"] }
